Refactor message queue to ConcurrentQueue, add tests
- Switched Control.MessageQueue from Stack to ConcurrentQueue for thread safety and FIFO processing
- Introduced AutoResetEvent for efficient message waiting in Application.Run, removing busy-waiting
- Added EnqueueMessage and TryDequeueMessage helpers for queue access and signaling
- Application.Run now processes all messages and waits efficiently for new ones
- On Stop, a dummy message is enqueued to unblock the wait
- Invalidate now uses EnqueueMessage
- ListBox now implements IDisposable to clean up event handlers
- Improved accelerator detection in MenuItem.SetText (escaped && no longer sets accelerator)
- TextCanvas methods now check bounds and avoid out-of-bounds drawing
- Added ConsoleLibTests project and updated tests for new queue logic
- Fixed MouseMove_Child_Transitions test to expect correct event count
- Various minor refactorings and robustness improvements

--- a/CSharpBible/Libraries/ConsoleLibTests/ConsoleLibTests.csproj
+++ b/CSharpBible/Libraries/ConsoleLibTests/ConsoleLibTests.csproj
@@ -1,4 +1,4 @@
-<Project>
+﻿<Project>
   <Import Project="..\Libraries.props" />
   <PropertyGroup>
     <TargetFrameworks>net462;net472;net48;net481</TargetFrameworks>
