--- a/CSharpBible/Graphics/All_Graphics/All_Graphics_net.csproj
+++ b/CSharpBible/Graphics/All_Graphics/All_Graphics_net.csproj
@@ -5,6 +5,7 @@
 		<OutputType>WinExe</OutputType>
 		<TargetFramework>net8.0-windows</TargetFramework>
 		<UseWPF>true</UseWPF>
+		<Platforms>AnyCPU;x64</Platforms>
 	</PropertyGroup>
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
