--- a/CSharpBible/Games/Werner_Flaschbier/Werner_Flaschbier_Base.csproj
+++ b/CSharpBible/Games/Werner_Flaschbier/Werner_Flaschbier_Base.csproj
@@ -3,6 +3,7 @@
 	<PropertyGroup>
 		<TargetFrameworks>net462;net472;net48;net481;net6.0;net7.0;net8.0;net9.0</TargetFrameworks>
 		<OutputType>Library</OutputType>
+		<Platforms>AnyCPU;x64</Platforms>
 	</PropertyGroup>
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
