--- a/CSharpBible/Graphics/MNIST3Learn/Mnist3Learn.csproj
+++ b/CSharpBible/Graphics/MNIST3Learn/Mnist3Learn.csproj
@@ -5,19 +5,20 @@
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
     <None Include="..\..\Resources\train-images.idx3-ubyte" Link="train-images.idx3-ubyte">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="..\..\Resources\train-labels.idx1-ubyte" Link="train-labels.idx1-ubyte" >
+    <None Include="..\..\Resources\train-labels.idx1-ubyte" Link="train-labels.idx1-ubyte">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="..\..\Resources\t10k-images.idx3-ubyte" Link="t10k-images.idx3-ubyte">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="..\..\Resources\t10k-labels.idx1-ubyte" Link="t10k-labels.idx1-ubyte" >
+    <None Include="..\..\Resources\t10k-labels.idx1-ubyte" Link="t10k-labels.idx1-ubyte">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
