--- a/CSharpBible/Graphics/MVVM_Converter_DrawGrid2/MVVM_Converter_DrawGrid2.csproj
+++ b/CSharpBible/Graphics/MVVM_Converter_DrawGrid2/MVVM_Converter_DrawGrid2.csproj
@@ -4,6 +4,7 @@
     <OutputType>WinExe</OutputType>
 	  <TargetFrameworks>net462;net472;net48;net481;net6.0-windows;net7.0-windows;net8.0-windows</TargetFrameworks>
 	  <UseWPF>true</UseWPF>
+	  <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
