--- a/CSharpBible/Graphics/MVVM_ImageHandling/MVVM_ImageHandling.csproj
+++ b/CSharpBible/Graphics/MVVM_ImageHandling/MVVM_ImageHandling.csproj
@@ -4,6 +4,7 @@
 		<OutputType>WinExe</OutputType>
 		<TargetFrameworks>net462;net472;net48;net481</TargetFrameworks>
 		<UseWPF>true</UseWPF>
+		<Platforms>AnyCPU;x64</Platforms>
 	</PropertyGroup>
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
