--- a/CSharpBible/Graphics/MVVM_ImageHandling/MVVM_ImageHandling_net.csproj
+++ b/CSharpBible/Graphics/MVVM_ImageHandling/MVVM_ImageHandling_net.csproj
@@ -4,6 +4,7 @@
 		<OutputType>WinExe</OutputType>
 		<TargetFrameworks>net6.0-windows;net7.0-windows;net8.0-windows</TargetFrameworks>
 		<UseWPF>true</UseWPF>
+		<Platforms>AnyCPU;x64</Platforms>
 	</PropertyGroup>
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
