--- a/CSharpBible/Libraries/BaseLib/BaseLib.csproj
+++ b/CSharpBible/Libraries/BaseLib/BaseLib.csproj
@@ -3,6 +3,7 @@
 	<PropertyGroup>
 		<OutputType>Library</OutputType>
 		<TargetFrameworks>net6.0;net7.0;net8.0;net481;net48;net472;net462</TargetFrameworks>
+		<Platforms>AnyCPU;x64</Platforms>
 	</PropertyGroup>
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
