--- a/CSharpBible/Libraries/BaseLibTests/BaseLibTests.csproj
+++ b/CSharpBible/Libraries/BaseLibTests/BaseLibTests.csproj
@@ -4,6 +4,7 @@
 		<TargetFrameworks>net8.0;net481;net48;net472;net462</TargetFrameworks>
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
+    <Platforms>AnyCPU;x64</Platforms>
 	</PropertyGroup>
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
