--- a/CSharpBible/Libraries/CommonDialogs/CommonDialogs.csproj
+++ b/CSharpBible/Libraries/CommonDialogs/CommonDialogs.csproj
@@ -7,7 +7,7 @@
 		<UseWindowsForms>true</UseWindowsForms>
 		<UseWPF>true</UseWPF>
 		<SignAssembly>True</SignAssembly>
-		<Platforms>AnyCPU;x86</Platforms>
+		<Platforms>AnyCPU;x86;x64</Platforms>
 	</PropertyGroup>
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
