--- a/CSharpBible/Libraries/MVVM_BaseLibTests/MVVM_BaseLibTests.csproj
+++ b/CSharpBible/Libraries/MVVM_BaseLibTests/MVVM_BaseLibTests.csproj
@@ -5,7 +5,7 @@
 		<UseWPF>true</UseWPF>
 		<IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
-		<Platforms>AnyCPU;x86</Platforms>
+		<Platforms>AnyCPU;x86;x64</Platforms>
 	</PropertyGroup>
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
