--- a/CSharpBible/WPFSamples_2/WPF_Geometry/WPF_Geometry.csproj
+++ b/CSharpBible/WPFSamples_2/WPF_Geometry/WPF_Geometry.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net8.0-windows</TargetFramework>
     <UseWpf>true</UseWpf>
     <ProjectGuid>{B4D693A6-63AF-48A9-89CC-55BE89AE8FCC}</ProjectGuid>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
