--- a/CSharpBible/Graphics/Cifar10_2.WPF/Cifar10_2.WPF.csproj
+++ b/CSharpBible/Graphics/Cifar10_2.WPF/Cifar10_2.WPF.csproj
@@ -11,6 +11,8 @@
 
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.1" />
+    <PackageReference Include="Microsoft.ML" Version="3.0.1" />
   </ItemGroup>
 
   <ItemGroup>
