--- a/CSharpBible/Games/VTileEdit/VTileEdit.csproj
+++ b/CSharpBible/Games/VTileEdit/VTileEdit.csproj
@@ -24,6 +24,7 @@
 		<ProjectReference Include="..\..\Libraries\ConsoleDisplay\ConsoleDisplay.csproj" />
 	</ItemGroup>
 	<ItemGroup>
+		<Compile Include="Helpers\TileBinaryLoader.cs" />
 	</ItemGroup>
 
 </Project>
