--- a/CSharpBible/Games/TileSetAnimator.Tests/TileSetAnimator.Tests.csproj
+++ b/CSharpBible/Games/TileSetAnimator.Tests/TileSetAnimator.Tests.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MSTest" Version="4.0.2" />
+    <PackageReference Include="MSTest" />
   </ItemGroup>
 
   <ItemGroup>
