--- a/CSharpBible/Games/Packages.props
+++ b/CSharpBible/Games/Packages.props
@@ -28,6 +28,7 @@
 		<PackageVersion Include="MsBox.Avalonia" Version="3.0.0-rc2" />
 
 		<PackageVersion Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+		<PackageVersion Include="Microsoft.Extensions.Hosting" Version="10.0.1" />
 		<PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="10.0.1" />
 		<PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.1"/>
 		<PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.1"/>
