--- a/CSharpBible/Games/SharpHack.Engine/SharpHack.Engine.csproj
+++ b/CSharpBible/Games/SharpHack.Engine/SharpHack.Engine.csproj
@@ -7,10 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Libraries\BaseLib\BaseLib.csproj" />
     <ProjectReference Include="..\SharpHack.BaseCreatures\SharpHack.BaseCreatures.csproj" />
     <ProjectReference Include="..\SharpHack.BaseItems\SharpHack.BaseItems.csproj" />
     <ProjectReference Include="..\SharpHack.Base\SharpHack.Base.csproj" />
-    <ProjectReference Include="..\SharpHack.LevelGen\SharpHack.LevelGen.csproj" />
     <ProjectReference Include="..\SharpHack.Magic\SharpHack.Magic.csproj" />
     <ProjectReference Include="..\SharpHack.Persist\SharpHack.Persist.csproj" />
   </ItemGroup>
