--- a/CSharpBible/Games/Asteroids/Asteroids_net.csproj
+++ b/CSharpBible/Games/Asteroids/Asteroids_net.csproj
@@ -14,7 +14,7 @@
 	  <Page Remove="obj\**" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+		<PackageReference Include="CommunityToolkit.Mvvm" />
 	</ItemGroup>
 	<ItemGroup>
 	  <Folder Include="Model\" />
