--- a/CSharpBible/Games/AsteroidsModernUI/AsteroidsModernUI.csproj
+++ b/CSharpBible/Games/AsteroidsModernUI/AsteroidsModernUI.csproj
@@ -10,11 +10,11 @@
     <RootNamespace>AsteroidsModern.UI</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
-    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.1" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.1" />
-    <PackageReference Include="NAudio" Version="2.2.1" />
+    <PackageReference Include="CommunityToolkit.Mvvm"  />
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf"  />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
+    <PackageReference Include="Microsoft.Extensions.Hosting"  />
+    <PackageReference Include="NAudio"  />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AsteroidsModernEngine\AsteroidsModernEngine.csproj" />
