--- a/CSharpBible/Games/AsteroidsModernEngine/AsteroidsModernEngine.csproj
+++ b/CSharpBible/Games/AsteroidsModernEngine/AsteroidsModernEngine.csproj
@@ -17,6 +17,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
   </ItemGroup>
 </Project>
