--- a/CSharpBible/Games/BoxFlight/BoxFlight.csproj
+++ b/CSharpBible/Games/BoxFlight/BoxFlight.csproj
@@ -8,7 +8,7 @@
 		<LangVersion>preview</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.1" />
+    <PackageReference Include="CommunityToolkit.Mvvm" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection"  />
   </ItemGroup>
 </Project>
