--- a/CSharpBible/Games/CreateCards/CreateCards.csproj
+++ b/CSharpBible/Games/CreateCards/CreateCards.csproj
@@ -7,7 +7,7 @@
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
 	<ItemGroup>
-	  <PackageReference Include="System.Drawing.Common" Version="10.0.1" />
+	  <PackageReference Include="System.Drawing.Common" />
 	</ItemGroup>
 
 </Project>
