--- a/CSharpBible/Games/DetectiveGame.Console/DetectiveGame.Console.csproj
+++ b/CSharpBible/Games/DetectiveGame.Console/DetectiveGame.Console.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
   <ItemGroup>
     <!-- Direkte Referenz erforderlich für Source-Generatoren von CommunityToolkit.Mvvm -->
-    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.1" />
+    <PackageReference Include="CommunityToolkit.Mvvm" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection"/>
   </ItemGroup>
 </Project>
