--- a/CSharpBible/Games/DetectiveGame.Wpf/DetectiveGame.Wpf.csproj
+++ b/CSharpBible/Games/DetectiveGame.Wpf/DetectiveGame.Wpf.csproj
@@ -8,7 +8,7 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+    <PackageReference Include="CommunityToolkit.Mvvm" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DetectiveGame.Engine\DetectiveGame.Engine.csproj" />
