--- a/CSharpBible/Games/Galaxia_UI.Tests/Galaxia_UI.Tests.csproj
+++ b/CSharpBible/Games/Galaxia_UI.Tests/Galaxia_UI.Tests.csproj
@@ -6,6 +6,6 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Galaxia_UI\Galaxia_UI.csproj" />
-    <PackageReference Include="MSTest" Version="4.0.2" />
+    <PackageReference Include="MSTest"  />
   </ItemGroup>
 </Project>
