--- a/CSharpBible/Games/Galaxia_BaseTests/Galaxia_BaseTests.csproj
+++ b/CSharpBible/Games/Galaxia_BaseTests/Galaxia_BaseTests.csproj
@@ -9,9 +9,9 @@
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
-    <PackageReference Include="MSTest" Version="4.0.2" />
-    <PackageReference Include="NSubstitute" Version="5.3.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk"  />
+    <PackageReference Include="MSTest"  />
+    <PackageReference Include="NSubstitute" />
   </ItemGroup>
 
   <ItemGroup>
