--- a/CSharpBible/Games/Galaxia_UI/Galaxia_UI.csproj
+++ b/CSharpBible/Games/Galaxia_UI/Galaxia_UI.csproj
@@ -14,8 +14,8 @@
     <ProjectReference Include="..\Galaxia_Base\Galaxia_Base.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.1" />
+    <PackageReference Include="CommunityToolkit.Mvvm" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\" />
