--- a/CSharpBible/Games/HexaBan_Console/HexaBan_Console.csproj
+++ b/CSharpBible/Games/HexaBan_Console/HexaBan_Console.csproj
@@ -18,6 +18,6 @@
     <ProjectReference Include="..\HexaBan\HexaBan.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
   </ItemGroup>
 </Project>
