--- a/CSharpBible/Games/MidiSwing.MVVM/MidiSwing.MVVM.csproj
+++ b/CSharpBible/Games/MidiSwing.MVVM/MidiSwing.MVVM.csproj
@@ -9,8 +9,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
-    <PackageReference Include="NAudio" Version="2.2.1" />
+    <PackageReference Include="CommunityToolkit.Mvvm" />
+    <PackageReference Include="NAudio" />
   </ItemGroup>
 
 </Project>
