--- a/CSharpBible/Games/SharpHack.BaseCreatures/SharpHack.BaseCreatures.csproj
+++ b/CSharpBible/Games/SharpHack.BaseCreatures/SharpHack.BaseCreatures.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\SharpHack.Base\SharpHack.Base.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
 </Project>
