--- a/CSharpBible/Games/SharpHack.BaseTests/SharpHack.BaseTests.csproj
+++ b/CSharpBible/Games/SharpHack.BaseTests/SharpHack.BaseTests.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="MSTest" />
+    <PackageReference Include="NSubstitute" />
     <PackageReference Include="coverlet.collector">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -18,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SharpHack.Base\SharpHack.Base.csproj" />
+    <ProjectReference Include="..\SharpHack.BaseItems\SharpHack.BaseItems.csproj" />
   </ItemGroup>
 
 </Project>
