--- a/CSharpBible/Games/Snake_Console/Snake_Console.csproj
+++ b/CSharpBible/Games/Snake_Console/Snake_Console.csproj
@@ -12,7 +12,7 @@
 		<ProjectReference Include="..\Snake_Base\Snake_Base.csproj" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.1" />
-		<PackageReference Condition="$(TargetFramework.StartsWith(net462))" Include="System.ValueTuple" Version="4.6.1" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" />
+		<PackageReference Condition="$(TargetFramework.StartsWith(net462))" Include="System.ValueTuple" />
 	</ItemGroup>
 </Project>
