--- a/CSharpBible/Games/Snake_Base/Snake_Base.csproj
+++ b/CSharpBible/Games/Snake_Base/Snake_Base.csproj
@@ -12,8 +12,8 @@
 		<Folder Include="Helper\" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
-		<PackageReference Condition="$(TargetFramework.StartsWith(net462))" Include="System.ValueTuple" Version="4.6.1" />
+		<PackageReference Include="CommunityToolkit.Mvvm" />
+		<PackageReference Condition="$(TargetFramework.StartsWith(net462))" Include="System.ValueTuple" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\..\Libraries\BaseLib\BaseLib.csproj" />
