--- a/CSharpBible/Games/VectorGfx/VectorGfx.csproj
+++ b/CSharpBible/Games/VectorGfx/VectorGfx.csproj
@@ -18,8 +18,8 @@
 		<Page Remove="obj\**" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.1" />
-		<PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" />
+		<PackageReference Include="Microsoft.Xaml.Behaviors.Wpf"/>
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="$(UpDir)\Libraries\MVVM_BaseLib\MVVM_BaseLib.csproj" />
