--- a/CSharpBible/Games/Treppen.WPF/Treppen.WPF.csproj
+++ b/CSharpBible/Games/Treppen.WPF/Treppen.WPF.csproj
@@ -9,8 +9,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.1" />
+    <PackageReference Include="CommunityToolkit.Mvvm" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection"  />
   </ItemGroup>
 
   <ItemGroup>
