--- a/CSharpBible/Games/Werner_Flaschbier/Werner_Flaschbier_Console.csproj
+++ b/CSharpBible/Games/Werner_Flaschbier/Werner_Flaschbier_Console.csproj
@@ -24,7 +24,7 @@
 		<ProjectReference Include="Werner_Flaschbier_Base.csproj" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.1" />
-		<PackageReference Condition="$(TargetFramework.StartsWith(net462))" Include="System.ValueTuple" Version="4.6.1" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection"  />
+		<PackageReference Condition="$(TargetFramework.StartsWith(net462))" Include="System.ValueTuple" />
 	</ItemGroup>
 </Project>
