--- a/CSharpBible/Games/Packages.props
+++ b/CSharpBible/Games/Packages.props
@@ -26,6 +26,8 @@
 		<PackageVersion Include="FontPickerAvalonia" Version="0.10.18.1" />
 		<PackageVersion Include="MessageBox.Avalonia" Version="3.3.0" />
 		<PackageVersion Include="MsBox.Avalonia" Version="3.0.0-rc2" />
+		<PackageVersion Include="NAudio" Version="2.2.1" />
+		<PackageVersion Include="IndexRange" Version="1.1.0" />
 
 		<PackageVersion Include="CommunityToolkit.Mvvm" Version="8.4.0" />
 		<PackageVersion Include="Microsoft.Extensions.Hosting" Version="10.0.1" />
