Update .gitignore for images and MNIST resource files
Added entries to .gitignore to exclude tiles.png and tiles2.png in /CSharpBible/Games/SharpHack.Wpf as well as four MNIST dataset files (t10k-images.idx3-ubyte, t10k-labels.idx1-ubyte, train-images.idx3-ubyte, train-labels.idx1-ubyte) in /CSharpBible/Resources from version control. This prevents large or generated files from being tracked in the repository.

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,9 @@ obj
 /CSharpBible/MVVM_Tutorial/UWP_00_Test
 /CSharpBible/WinUI/App1
 /TestStatements/Help
+/CSharpBible/Games/SharpHack.Wpf/tiles.png
+/CSharpBible/Games/SharpHack.Wpf/tiles2.png
+/CSharpBible/Resources/t10k-images.idx3-ubyte
+/CSharpBible/Resources/t10k-labels.idx1-ubyte
+/CSharpBible/Resources/train-images.idx3-ubyte
+/CSharpBible/Resources/train-labels.idx1-ubyte
