Ignore Version.svn and remove from repository
Added /CSharpBible/Games/Sokoban_Base/Version.svn to .gitignore to prevent tracking of SVN metadata files. Removed the existing Version.svn file, which contained repository and revision information, from the repository.

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ obj
 /CSharpBible/Resources/t10k-labels.idx1-ubyte
 /CSharpBible/Resources/train-images.idx3-ubyte
 /CSharpBible/Resources/train-labels.idx1-ubyte
+/CSharpBible/Games/Sokoban_Base/Version.svn
