--- a/CSharpBible/Games/SharpHack.Server/SharpHack.Server.csproj
+++ b/CSharpBible/Games/SharpHack.Server/SharpHack.Server.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -17,6 +17,11 @@
     <ProjectReference Include="..\SharpHack.Persist\SharpHack.Persist.csproj" />
     <ProjectReference Include="..\SharpHack.Base\SharpHack.Base.csproj" />
     <ProjectReference Include="..\..\Libraries\BaseLib\BaseLib.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Ansi\" />
+    <Folder Include="Remote\" />
   </ItemGroup>
 
 </Project>
