--- a/CSharpBible/Games/AsteroidsModernEngineTests/AsteroidsModernEngineTests.csproj
+++ b/CSharpBible/Games/AsteroidsModernEngineTests/AsteroidsModernEngineTests.csproj
@@ -8,8 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
-    <PackageReference Include="MSTest" Version="4.0.2" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk"  />
+    <PackageReference Include="MSTest" />
   </ItemGroup>
 
   <ItemGroup>
