--- a/CSharpBible/Games/DetectiveGame.Engine/DetectiveGame.Engine.csproj
+++ b/CSharpBible/Games/DetectiveGame.Engine/DetectiveGame.Engine.csproj
@@ -6,4 +6,9 @@
     <LangVersion>latest</LangVersion>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
+  <ItemGroup>
+    <Compile Remove="obj\**" />
+    <EmbeddedResource Remove="obj\**" />
+    <None Remove="obj\**" />
+  </ItemGroup>
 </Project>
