--- a/CSharpBible/Games/SharpHack.EngineTests/SharpHack.EngineTests.csproj
+++ b/CSharpBible/Games/SharpHack.EngineTests/SharpHack.EngineTests.csproj
@@ -7,6 +7,12 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
+	<ItemGroup>
+	  <Compile Remove="obj\**" />
+	  <EmbeddedResource Remove="obj\**" />
+	  <None Remove="obj\**" />
+	</ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
 	  <PackageReference Include="MSTest" />
