--- a/CSharpBible/Games/AsteroidsModernEngine/AsteroidsModernEngine.csproj
+++ b/CSharpBible/Games/AsteroidsModernEngine/AsteroidsModernEngine.csproj
@@ -1,20 +1,24 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project>
+  <Import Project="..\Games_net.props" />
   <PropertyGroup>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <LangVersion>preview</LangVersion>
+    <TargetFrameworks>net6.0;net7.0;net8.0</TargetFrameworks>
     <AssemblyName>AsteroidsModernEngine</AssemblyName>
     <RootNamespace>AsteroidsModern.Engine</RootNamespace>
   </PropertyGroup>
-
-  <PropertyGroup>
-    <_SdkVersion>$(NETCoreSdkVersion)</_SdkVersion>
-    <!-- Build TargetFrameworks list based on available SDK version -->
-    <TargetFrameworks Condition="$([MSBuild]::VersionGreaterThanOrEquals('$(_SdkVersion)', '6.0.100'))">net6.0</TargetFrameworks>
-    <TargetFrameworks Condition="$([MSBuild]::VersionGreaterThanOrEquals('$(_SdkVersion)', '7.0.100'))">$(TargetFrameworks);net7.0</TargetFrameworks>
-    <TargetFrameworks Condition="$([MSBuild]::VersionGreaterThanOrEquals('$(_SdkVersion)', '8.0.100'))">$(TargetFrameworks);net8.0</TargetFrameworks>
-    <TargetFrameworks Condition="$([MSBuild]::VersionGreaterThanOrEquals('$(_SdkVersion)', '9.0.100'))">$(TargetFrameworks);net9.0</TargetFrameworks>
+  <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
+  <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
+  <PropertyGroup Condition="$([MSBuild]::VersionGreaterThanOrEquals('$(NETCoreSdkVersion)', '9.0.100'))">
+    <TargetFrameworks>$(TargetFrameworks);net9.0</TargetFrameworks>
   </PropertyGroup>
+  <PropertyGroup Condition="$([MSBuild]::VersionGreaterThanOrEquals('$(NETCoreSdkVersion)', '10.0.100'))">
+    <TargetFrameworks>$(TargetFrameworks);net10.0</TargetFrameworks>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="obj\**" />
+    <EmbeddedResource Remove="obj\**" />
+    <None Remove="obj\**" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
