--- a/CSharpBible/Games/RemoteTerminal/RemoteTerminal.csproj
+++ b/CSharpBible/Games/RemoteTerminal/RemoteTerminal.csproj
@@ -1,5 +1,5 @@
 <Project>
-  <Import Project="..\Games.props" />
+  <Import Project="..\Games_net.props" />
   <PropertyGroup>
     <OutputType>Library</OutputType>
     <TargetFrameworks>net6.0;net7.0;net8.0;net481;net48;net472;net462</TargetFrameworks>
