--- a/CSharpBible/Games/Games_net.props
+++ b/CSharpBible/Games/Games_net.props
@@ -9,7 +9,8 @@
 		<ImplicitUsings>disable</ImplicitUsings>
 		<Company>JC-Soft</Company>
 		<Authors>Joe Care</Authors>
-		<Copyright>Copyright © JC-Soft 2025</Copyright>
+		<Copyright>Copyright © JC-Soft 2026</Copyright>
     <SuppressTfmSupportBuildErrors>true</SuppressTfmSupportBuildErrors>
+    <SuppressTfmSupportBuildWarnings>true</SuppressTfmSupportBuildWarnings>
 	</PropertyGroup>
 </Project>
