--- a/CSharpBible/Games/SharpHack.WPF2D/SharpHack.WPF2D.csproj
+++ b/CSharpBible/Games/SharpHack.WPF2D/SharpHack.WPF2D.csproj
@@ -9,6 +9,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="obj\**" />
+    <EmbeddedResource Remove="obj\**" />
+    <None Remove="obj\**" />
+    <Page Remove="obj\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="tileset_cutout3.png" />
   </ItemGroup>
 
