--- a/CSharpBible/Games/Directory.Packages.props
+++ b/CSharpBible/Games/Directory.Packages.props
@@ -2,6 +2,6 @@
   <Target Name="Any">
       <Message Text="$(TargetFramework) in the project file $(MSBuildProjectName)" />
   </Target>
-  <Import Project="Games.props" />
+  <Import Project="Games_net.props" />
   <Import Project="Packages.props" />
 </Project>
