Exclude obj\ files from build, update TLS env vars
Added ItemGroups to all relevant .csproj files to exclude obj\ artifacts from Compile, EmbeddedResource, None, and Page items, preventing accidental inclusion of build outputs.
Refactored Sokoban.Server/Program.cs to use SOKOSERVER_TLS_* environment variables instead of SHARPHACK_TLS_*, with constants for consistency. Console output now displays the assembly name dynamically.
Reordered ProjectReference entries in Sokoban.Server.csproj.
Changed PreBuild target condition in Sokoban_Base.csproj from net6.0 to net6.01.
Added a conditional using for System.Runtime.Loader in AppWithPlugin.cs for .NET 6.0 or greater, and a clarifying comment in AppWithPlugin.csproj.

--- a/CSharpBible/Games/MidiSwing.MVVM/MidiSwing.MVVM.csproj
+++ b/CSharpBible/Games/MidiSwing.MVVM/MidiSwing.MVVM.csproj
@@ -9,6 +9,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="obj\**" />
+    <EmbeddedResource Remove="obj\**" />
+    <None Remove="obj\**" />
+    <Page Remove="obj\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" />
     <PackageReference Include="NAudio" />
   </ItemGroup>
