--- a/CSharpBible/Games/SharpHack.AITests/SharpHack.AITests.csproj
+++ b/CSharpBible/Games/SharpHack.AITests/SharpHack.AITests.csproj
@@ -8,6 +8,12 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Compile Remove="obj\**" />
+	  <EmbeddedResource Remove="obj\**" />
+	  <None Remove="obj\**" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Microsoft.NET.Test.Sdk" />
 		<PackageReference Include="MSTest" />
 		<PackageReference Include="coverlet.collector">
