--- a/CSharpBible/Games/SharpHack.Server/SharpHack.Server.csproj
+++ b/CSharpBible/Games/SharpHack.Server/SharpHack.Server.csproj
@@ -9,8 +9,11 @@
 
   <ItemGroup>
     <Compile Remove="Game\**" />
+    <Compile Remove="obj\**" />
     <EmbeddedResource Remove="Game\**" />
+    <EmbeddedResource Remove="obj\**" />
     <None Remove="Game\**" />
+    <None Remove="obj\**" />
   </ItemGroup>
 
   <ItemGroup>
