--- a/CSharpBible/Games/Arkanoid.Base/Arkanoid.Base.csproj
+++ b/CSharpBible/Games/Arkanoid.Base/Arkanoid.Base.csproj
@@ -15,5 +15,10 @@
   <PropertyGroup Condition="$([MSBuild]::VersionGreaterThanOrEquals('$(NETCoreSdkVersion)', '10.0.100'))">
     <TargetFrameworks>$(TargetFrameworks);net10.0</TargetFrameworks>
   </PropertyGroup>
+  <ItemGroup>
+    <Compile Remove="obj\**" />
+    <EmbeddedResource Remove="obj\**" />
+    <None Remove="obj\**" />
+  </ItemGroup>
 
 </Project>
