--- a/CSharpBible/Games/SharpHack.Base/SharpHack.Base.csproj
+++ b/CSharpBible/Games/SharpHack.Base/SharpHack.Base.csproj
@@ -4,5 +4,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+	<ItemGroup>
+	  <Compile Remove="obj\**" />
+	  <EmbeddedResource Remove="obj\**" />
+	  <None Remove="obj\**" />
+	</ItemGroup>
 
 </Project>
